// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`GateStatusIndicator Snapshot Testing should match snapshot for failed status 1`] = `
<div
  aria-label="Coverage gate: failed"
  class="flex flex-col items-center justify-center p-4 bg-white rounded-lg border border-gray-200 shadow-sm hover:shadow-md transition-shadow"
  data-testid="gate-coverage"
  role="listitem"
>
  <div
    aria-hidden="true"
    class="text-3xl mb-2"
  >
    📊
  </div>
  <div
    class="text-sm font-medium text-gray-900 mb-2 text-center"
  >
    Coverage
  </div>
  <div
    aria-label="Status: failed"
    class="flex items-center gap-1 px-2 py-1 text-xs font-medium rounded-full border bg-red-100 text-red-800 border-red-300"
    role="status"
  >
    <span
      aria-hidden="true"
    >
      ❌
    </span>
    <span>
      failed
    </span>
  </div>
</div>
`;

exports[`GateStatusIndicator Snapshot Testing should match snapshot for passed status 1`] = `
<div
  aria-label="Tests gate: passed"
  class="flex flex-col items-center justify-center p-4 bg-white rounded-lg border border-gray-200 shadow-sm hover:shadow-md transition-shadow"
  data-testid="gate-tests"
  role="listitem"
>
  <div
    aria-hidden="true"
    class="text-3xl mb-2"
  >
    🧪
  </div>
  <div
    class="text-sm font-medium text-gray-900 mb-2 text-center"
  >
    Tests
  </div>
  <div
    aria-label="Status: passed"
    class="flex items-center gap-1 px-2 py-1 text-xs font-medium rounded-full border bg-green-100 text-green-800 border-green-300"
    role="status"
  >
    <span
      aria-hidden="true"
    >
      ✅
    </span>
    <span>
      passed
    </span>
  </div>
</div>
`;

exports[`GateStatusIndicator Snapshot Testing should match snapshot for pending status 1`] = `
<div
  aria-label="Code Review gate: pending"
  class="flex flex-col items-center justify-center p-4 bg-white rounded-lg border border-gray-200 shadow-sm hover:shadow-md transition-shadow"
  data-testid="gate-review"
  role="listitem"
>
  <div
    aria-hidden="true"
    class="text-3xl mb-2"
  >
    🔍
  </div>
  <div
    class="text-sm font-medium text-gray-900 mb-2 text-center"
  >
    Code Review
  </div>
  <div
    aria-label="Status: pending"
    class="flex items-center gap-1 px-2 py-1 text-xs font-medium rounded-full border bg-gray-100 text-gray-800 border-gray-200"
    role="status"
  >
    <span
      aria-hidden="true"
    >
      ❓
    </span>
    <span>
      pending
    </span>
  </div>
</div>
`;

exports[`GateStatusIndicator Snapshot Testing should match snapshot for running status 1`] = `
<div
  aria-label="Linting gate: running"
  class="flex flex-col items-center justify-center p-4 bg-white rounded-lg border border-gray-200 shadow-sm hover:shadow-md transition-shadow"
  data-testid="gate-lint"
  role="listitem"
>
  <div
    aria-hidden="true"
    class="text-3xl mb-2"
  >
    ✨
  </div>
  <div
    class="text-sm font-medium text-gray-900 mb-2 text-center"
  >
    Linting
  </div>
  <div
    aria-label="Status: running"
    class="flex items-center gap-1 px-2 py-1 text-xs font-medium rounded-full border bg-yellow-100 text-yellow-800 border-yellow-300"
    role="status"
  >
    <span
      aria-hidden="true"
    >
      ⏳
    </span>
    <span>
      running
    </span>
  </div>
</div>
`;
